--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <header>Round 1</header>
+    <div class="game">
+        <div class="userScore">
+            <div class="buttons">
+                <div id="rock">
+                    <button>
+                        <img src="images/rock.png" alt="ROCK" width="200" height="300">
+                    </button>
+                </div>
+                <div id="paper">
+                    <button>
+                        <img src="images/paper.png" alt="PAPER" width="200" height="300">
+                    </button>
+                    <h2>Take your pick</h2>
+                </div>
+                <div id="scissors">
+                    <button>
+                        <img src="images/scissors.png" alt="SCISSORS" width="200" height="300">
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="computerScore">
+
+        </div>
+    </div>
    <script src="javaScript/script.js"></script> 
 </body>
 </html>
