last minute edits

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="overlay" id="overlay">
         <div class="modal" id="modal">
           <img src="your-image-url-here" alt="Notification Image">
+          <p>Your message here.</p>
         </div>
       </div>
     <div class="game">
